Bug 571822 - Fire timeupdate event less frequently than once per frame - r=kinetik a=blocking2.0